fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,20 @@
   border-color: darkblue;
 }
 
-.head h1 { 
-  align-items: center;
+h1 { 
+  margin-left: 20px;
+}
+
+.container-fluid {
+  margin-left: 20px;
+}
+
+p {
+  margin-left: 20px;  
+}
+
+.table-responsive {
+  margin-left: 20px;
 }
 
 .nav-item {
